--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <slide class="title-slide segue nobackground">
   <hgroup class="auto-fadein">
     <h1>Interactive Visualizations</h1>
-    <h2>rCharts, UseR 2014</h2>
+    <h2>rCharts, UseR 2014ss</h2>
     <p>Ramnath Vaidyanathan (@ramnath_vaidya)<br/>McGill University</p>
   </hgroup>
     <a href="https://github.com/ramnathv/user2014-rcharts/zipball/gh-pages" class="example">
@@ -368,13 +368,29 @@ map</textarea></p>
 
 <pre><code class="r">rmeetups = readRDS(&#39;data/rmeetups.rds&#39;)
 L1 &lt;- Mapbox2()
-L1$set(width = 1600, height = 800, dom = &#39;map&#39;, map_id = &#39;ramnathv.i2lkbedb&#39;)
-L1$setView(c(-30, 130), 2)
-L1$set(geojson = toGeoJSON(rmeetups), hover = TRUE)
-L1
 </code></pre>
 
-<p><iframe src=' assets/fig/unnamed-chunk-8.html ' scrolling='no' frameBorder='0' seamless class='rChart mapbox2 ' id=iframe- map ></iframe> <style>iframe.rChart{ width: 100%; height: 400px;}</style></p>
+<h2>Error: could not find function &quot;Mapbox2&quot;</h2>
+
+<pre><code class="r">L1$set(width = 1600, height = 800, dom = &#39;map&#39;, map_id = &#39;ramnathv.i2lkbedb&#39;)
+</code></pre>
+
+<h2>Error: object &#39;L1&#39; not found</h2>
+
+<pre><code class="r">L1$setView(c(-30, 130), 2)
+</code></pre>
+
+<h2>Error: object &#39;L1&#39; not found</h2>
+
+<pre><code class="r">L1$set(geojson = toGeoJSON(rmeetups), hover = TRUE)
+</code></pre>
+
+<h2>Error: object &#39;L1&#39; not found</h2>
+
+<pre><code class="r">L1
+</code></pre>
+
+<h2>Error: object &#39;L1&#39; not found</h2>
 
   </article>
   <!-- Presenter Notes -->
@@ -388,7 +404,7 @@ L1
 ichoropleth(Crime ~ State, data = violent_crime, animate = &quot;Year&quot;)
 </code></pre>
 
-<p><iframe src=' assets/fig/unnamed-chunk-9.html ' scrolling='no' frameBorder='0' seamless class='rChart datamaps ' id=iframe- chart17825053c1f3 ></iframe> <style>iframe.rChart{ width: 100%; height: 400px;}</style></p>
+<h2>Error: object &#39;opts_current&#39; not found</h2>
 
   </article>
   <!-- Presenter Notes -->
@@ -407,7 +423,7 @@ ichoropleth(Crime ~ State, data = violent_crime, animate = &quot;Year&quot;)
 d1
 </code></pre>
 
-<p><iframe src=' assets/fig/unnamed-chunk-11.html ' scrolling='no' frameBorder='0' seamless class='rChart crosslet ' id=iframe- chart17822ae261b8 ></iframe> <style>iframe.rChart{ width: 100%; height: 400px;}</style></p>
+<h2>Error: object &#39;opts_current&#39; not found</h2>
 
   </article>
   <!-- Presenter Notes -->
@@ -521,7 +537,9 @@ n1</textarea></p>
     <h2>Interactive Chart with Shiny Controls</h2>
   </hgroup>
   <article data-timings="">
-    <div class="row-fluid">
+    <p>Loading required package: shiny</p>
+
+<div class="row-fluid">
   <div class="span4">
     <form class="well">
       <label class="control-label" for="sex">Choose Sex</label>
@@ -683,7 +701,7 @@ n1$publish(&#39;mychart.html&#39;)
   <article data-timings="">
     <!-- html table generated in R 3.1.0 by xtable 1.7-3 package -->
 
-<!-- Tue Jul  1 13:38:44 2014 -->
+<!-- Thu Sep 04 00:31:43 2014 -->
 
 <TABLE border=1>
 <TR> <TH>  </TH> <TH> Hair </TH> <TH> Eye </TH> <TH> Sex </TH> <TH> Freq </TH>  </TR>
